--- a/Artificieri.html
+++ b/Artificieri.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="artificieri/style.css">
   <title>Fanta Best Mister</title>
 </head>
 <body>
   <div> ARTIFICIERI</div>
+  <img src="artificieri/artificieri.jpg">
 </body>
 </html>
