Report giornata 5 con nomi senza spazio

--- a/Daiweisi.html
+++ b/Daiweisi.html
@@ -7,7 +7,32 @@
   <title>Fanta Best Mister</title>
 </head>
 <body>
-  <div> DAIWEISI</div>
-  <img src="daiweisi/daiwieisi.jpg">
+  <h1>VERSIONE MOBILE</h1>
+  <ul>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/BOTAFIGA'">BOTAFIGA</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/FighetteaNastro'">Fighette a nastro</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/monabeach'">monabeach</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/TULIPANIVERDIFC'">TULIPANIVERDI FC</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/ManchesterSimy'">Manchester Simy</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/WandaNazionale'">Wanda Nazionale</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/Jultimi'">Jultimi</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/CSKABurri'">CSKA Burri</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/GuardaMilanoFC'">Guarda Milano FC</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/mobile/MignottinghamForest'">Mignottingham Forest</button></li>
+  </ul>
+  
+  <h1>VERSIONE PC</h1>
+  <ul>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/BOTAFIGA'">BOTAFIGA</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/FighetteaNastro'">Fighette a nastro</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/monabeach'">monabeach</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/TULIPANIVERDIFC'">TULIPANIVERDI FC</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/ManchesterSimy'">Manchester Simy</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/WandaNazionale'">Wanda Nazionale</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/Jultimi'">Jultimi</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/CSKABurri'">CSKA Burri</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/GuardaMilanoFC'">Guarda Milano FC</button></li>
+      <li><button onclick="window.location.href='https://antoniosavolare.github.io/FantaBestMister/daiweisi/report/MignottinghamForest'">Mignottingham Forest</button></li>
+  </ul>
 </body>
 </html>
