--- a/daiweisi/report/mobile/Fighetteanastro.html
+++ b/daiweisi/report/mobile/Fighetteanastro.html
@@ -25,7 +25,25 @@
   <div>Punteggio: 74</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 6</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Montipo' - 5</div>
+    <div class="player" style="top: 7%; left: 20%;">Carlos Augusto - 6</div><div class="player" style="top: 27%; left: 20%;">Scalvini - 6</div><div class="player" style="top: 47%; left: 20%;">Ruggeri - 6</div><div class="player" style="top: 67%; left: 20%;">Erlic - 6.5</div><div class="player" style="top: 87%; left: 20%;">Danilo - 6</div> 
+    <div class="player" style="top: 17%; left: 40%;">Guendouzi - 6</div><div class="player" style="top: 37%; left: 40%;">Matheus Henrique - 6</div><div class="player" style="top: 57%; left: 40%;">Pereyra - 5.5</div><div class="player" style="top: 77%; left: 40%;">Mkhitaryan - 5.5</div>
+    <div class="player" style="top: 47%; left: 70%;">Caso - 7.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Milinkovic-Savic V.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4 (6)</span></li><li><span class="aligned-span">Montipo'</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Biraghi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Rodriguez R.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Danilo</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Lovato</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Erlic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Ruggeri</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Scalvini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Carlos Augusto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Pereyra</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Mkhitaryan</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Guendouzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Duda</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Matheus Henrique</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6.5)</span></li><li><span class="aligned-span">Vlasic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Belotti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Bonazzoli</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Lukaku</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Thuram</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Caso</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Karlsson</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Gemello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Harroui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kamada</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 67</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 74</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 141</h1>
 </body>
 </html>
