--- a/daiweisi/report/TULIPANIVERDIFC.html
+++ b/daiweisi/report/TULIPANIVERDIFC.html
@@ -26,7 +26,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 76</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 6</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Carnesecchi - 6</div>
+        <div class="difensori giocatori">|Pedersen-6||Dorgu-6||Oyono-5||Dimarco-6|</div>
+        <div class="centrocampisti giocatori">|Bajrami-10||Reijnders-8||Frattesi-6||Lovric-6||El Shaarawy-5.5|</div>
+        <div class="attaccanti giocatori">|Almqvist-5.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Falcone</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span> <br><span class="aligned-span">Carnesecchi</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Dimarco</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mazzocchi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Oyono</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Dorgu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Pedersen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">El Shaarawy</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Pasalic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Frattesi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Bajrami</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Lovric</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ciurria</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Reijnders</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">8 (7)</span> <br><span class="aligned-span">Dybala</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Sanabria</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Almqvist</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Beltran L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Musso</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Calabria</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Smalling</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Doig</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Jankto</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Jovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Giroud</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 72</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 76</h1>
+    <h1>TOTALE PUNTI MASSIMO: 148</h1>
 </body>
 </html>
