--- a/daiweisi/report/mobile/Mignottinghamforest.html
+++ b/daiweisi/report/mobile/Mignottinghamforest.html
@@ -25,7 +25,25 @@
   <div>Punteggio: 71.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 6</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Provedel - 6</div>
+    <div class="player" style="top: 7%; left: 20%;">Natan - 6.5</div><div class="player" style="top: 27%; left: 20%;">Kristiansen - 6</div><div class="player" style="top: 47%; left: 20%;">Gendrey - 6</div><div class="player" style="top: 67%; left: 20%;">Gatti - 6</div><div class="player" style="top: 87%; left: 20%;">Spinazzola - 6.5</div> 
+    <div class="player" style="top: 17%; left: 40%;">Koopmeiners - 10</div><div class="player" style="top: 37%; left: 40%;">Politano - 8</div><div class="player" style="top: 57%; left: 40%;">Frendrup - 7.5</div><div class="player" style="top: 77%; left: 40%;">Lindstrom - 6.5</div>
+    <div class="player" style="top: 47%; left: 70%;">Milik - 9.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Consigli</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span></li><li><span class="aligned-span">Provedel</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Spinazzola</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (5.5)</span></li><li><span class="aligned-span">Milenkovic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Augello</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Gatti</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Gendrey</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kristiansen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Natan</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Politano</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">8 (7)</span></li><li><span class="aligned-span">Chukwueze</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ndoye</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Koopmeiners</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Frendrup</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Lindstrom</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Rafia</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Milik</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (6.5)</span></li><li><span class="aligned-span">Vlahovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Azmoun</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ngonge</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">4.5 (5)</span></li><li><span class="aligned-span">Cheddira</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Sepe</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Vojvoda</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Fabbian</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Arnautovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 80.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 71.5</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 152</h1>
 </body>
 </html>
