--- a/daiweisi/report/mobile/TULIPANIVERDIFC.html
+++ b/daiweisi/report/mobile/TULIPANIVERDIFC.html
@@ -25,7 +25,25 @@
   <div>Punteggio: 76</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 6</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Carnesecchi - 6</div>
+    <div class="player" style="top: 17%; left: 20%;">Pedersen - 6</div><div class="player" style="top: 37%; left: 20%;">Dorgu - 6</div><div class="player" style="top: 57%; left: 20%;">Oyono - 5</div><div class="player" style="top: 77%; left: 20%;">Dimarco - 6</div> 
+    <div class="player" style="top: 7%; left: 40%;">Bajrami - 10</div><div class="player" style="top: 27%; left: 40%;">Reijnders - 8</div><div class="player" style="top: 47%; left: 40%;">Frattesi - 6</div><div class="player" style="top: 67%; left: 40%;">Lovric - 6</div><div class="player" style="top: 87%; left: 40%;">El Shaarawy - 5.5</div>
+    <div class="player" style="top: 47%; left: 70%;">Almqvist - 5.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Falcone</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Carnesecchi</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Dimarco</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Mazzocchi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Oyono</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Dorgu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Pedersen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">El Shaarawy</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Pasalic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Frattesi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bajrami</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Lovric</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Ciurria</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Reijnders</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">8 (7)</span></li><li><span class="aligned-span">Dybala</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Sanabria</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Almqvist</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Beltran L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Musso</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Calabria</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Smalling</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Doig</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Jankto</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Jovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Giroud</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 72</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 76</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 148</h1>
 </body>
 </html>
