--- a/daiweisi/report/Mignottinghamforest.html
+++ b/daiweisi/report/Mignottinghamforest.html
@@ -42,7 +42,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 80.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 7</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Consigli - 5.5</div>
+        <div class="difensori giocatori">|Natan-6.5||Kristiansen-6.5||Gatti-6||Spinazzola-6|</div>
+        <div class="centrocampisti giocatori">|Politano-10||Frendrup-7||Ndoye-6||Lindstrom-6||Rafia-6|</div>
+        <div class="attaccanti giocatori">|Cheddira-5.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Consigli</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span> <br><span class="aligned-span">Provedel</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4.5 (6.5)</span> <br><span class="aligned-span">Spinazzola</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Milenkovic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Augello</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Gatti</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Gendrey</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Kristiansen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Natan</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Politano</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Chukwueze</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Ndoye</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Koopmeiners</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Frendrup</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (6.5)</span> <br><span class="aligned-span">Lindstrom</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Rafia</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Azmoun</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Ngonge</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Cheddira</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Sepe</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Vojvoda</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Fabbian</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Milik</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Vlahovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Arnautovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 72</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 152</h1>
+    <h1>TOTALE PUNTI MASSIMO: 224</h1>
 </body>
 </html>
