--- a/daiweisi/report/monabeach.html
+++ b/daiweisi/report/monabeach.html
@@ -42,7 +42,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 89.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 7</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Szczesny - 6.5</div>
+        <div class="difensori giocatori">|Dumfries-6.5||Parisi-6||Bastoni S.-5.5||De Vrij-6|</div>
+        <div class="centrocampisti giocatori">|Orsolini-17.5||Folorunsho-6.5||Loftus-Cheek-6|</div>
+        <div class="attaccanti giocatori">|Lucca-9.5||Berardi-6.5||Zirkzee-6.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Szczesny</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">De Vrij</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Bastoni S.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Parisi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Casale</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Dumfries</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Baschirotto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Felipe Anderson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Orsolini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">17.5 (8.5)</span> <br><span class="aligned-span">Rabiot</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Loftus-Cheek</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Nandez</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Ilic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Folorunsho</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Berardi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Zirkzee</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Soule'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Lucca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (6.5)</span> <br><span class="aligned-span">Perin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Audero</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Buongiorno</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Thiaw</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Renato Sanches</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Caprari</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Banda</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 85</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 154.5</h1>
+    <h1>TOTALE PUNTI MASSIMO: 239.5</h1>
 </body>
 </html>
