--- a/daiweisi/report/CSKABurri.html
+++ b/daiweisi/report/CSKABurri.html
@@ -42,7 +42,23 @@
     <h4>Bonus imbattibilita: 0</h4>
     <h4>Bonus difesa: 3</h4>
     <h3>Punteggio: 72</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 7</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Meret - 6</div>
+        <div class="difensori giocatori">|Schuurs-6.5||Perez N.-5.5||Dragusin-6.5||Hernandez T.-5.5|</div>
+        <div class="centrocampisti giocatori">|Ferguson-8||De Roon-6||Ederson D.s.-6||Colpani-6|</div>
+        <div class="attaccanti giocatori">|Rafael Leao-9||Mulattieri-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Meret</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ochoa</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">1.5 (5.5)</span> <br><span class="aligned-span">Zappacosta</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Marchizza</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Hernandez T.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Dragusin</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Perez N.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Holm</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">-0.5 (0)</span> <br><span class="aligned-span">Schuurs</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">De Roon</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Walace</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Strefezza</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Ricci S.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Ederson D.s.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ferguson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">8 (7)</span> <br><span class="aligned-span">Colpani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ramadani</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">3.5 (4)</span> <br><span class="aligned-span">Pinamonti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Caputo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Rafael Leao</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9 (7.5)</span> <br><span class="aligned-span">Dia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Mulattieri</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Gollini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Bastoni</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Toure' E.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 73</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 150.5</h1>
+    <h1>TOTALE PUNTI MASSIMO: 223.5</h1>
 </body>
 </html>
