--- a/daiweisi/report/Fighetteanastro.html
+++ b/daiweisi/report/Fighetteanastro.html
@@ -42,7 +42,23 @@
     <h4>Bonus imbattibilita: 0</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 67</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 7</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Montipo' - 6.5</div>
+        <div class="difensori giocatori">|Carlos Augusto-7.5||Scalvini-6.5||Ruggeri-6||Rodriguez R.-6.5|</div>
+        <div class="centrocampisti giocatori">|Mkhitaryan-7||Duda-6||Vlasic-6|</div>
+        <div class="attaccanti giocatori">|Lukaku-10||Thuram-8||Caso-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Milinkovic-Savic V.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Montipo'</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Rodriguez R.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Danilo</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Lovato</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (4.5)</span> <br><span class="aligned-span">Erlic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Ruggeri</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Scalvini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Carlos Augusto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Pereyra</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">4.5 (5)</span> <br><span class="aligned-span">Mkhitaryan</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">Guendouzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Duda</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Matheus Henrique</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Vlasic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Kamada</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Lukaku</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Thuram</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">8 (7)</span> <br><span class="aligned-span">Caso</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Gemello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Biraghi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Harroui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Belotti</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Bonazzoli</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Karlsson</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 3</h4>
+    <h3>Punteggio: 80</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 141</h1>
+    <h1>TOTALE PUNTI MASSIMO: 221</h1>
 </body>
 </html>
