--- a/daiweisi/report/mobile/BOTAFIGA.html
+++ b/daiweisi/report/mobile/BOTAFIGA.html
@@ -43,7 +43,25 @@
   <div>Punteggio: 77</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 7</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Skorupski - 7</div>
+    <div class="player" style="top: 17%; left: 20%;">Kristensen - 6</div><div class="player" style="top: 37%; left: 20%;">Beukema - 6.5</div><div class="player" style="top: 57%; left: 20%;">Birindelli - 5.5</div><div class="player" style="top: 77%; left: 20%;">Faraoni - 6</div> 
+    <div class="player" style="top: 27%; left: 40%;">De Ketelaere - 6.5</div><div class="player" style="top: 47%; left: 40%;">Zaccagni - 6</div><div class="player" style="top: 67%; left: 40%;">Boloca - 6</div>
+    <div class="player" style="top: 27%; left: 70%;">Martinez L. - 21</div><div class="player" style="top: 47%; left: 70%;">Retegui - 7</div><div class="player" style="top: 67%; left: 70%;">Brekalo - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Skorupski</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">7 (7)</span></li><li><span class="aligned-span">Hysaj</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Faraoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">N'dicka</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Birindelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Beukema</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Kristensen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Zaccagni</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kastanos</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Aouar</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Weah</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Radonjic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">De Ketelaere</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Boloca</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Makoumbou</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Martinez L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">21 (9)</span></li><li><span class="aligned-span">Brekalo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Retegui</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7 (6)</span></li><li><span class="aligned-span">Krstovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Ravaglia F.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Christensen O.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lazzari</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Dodo'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lapadula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Davis K.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 85.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 148.5</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 234</h1>
 </body>
 </html>
