--- a/daiweisi/report/mobile/ManchesterSimy.html
+++ b/daiweisi/report/mobile/ManchesterSimy.html
@@ -43,7 +43,25 @@
   <div>Punteggio: 76.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 7</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Martinez Jo. - 3</div>
+    <div class="player" style="top: 17%; left: 20%;">Olivera - 6</div><div class="player" style="top: 37%; left: 20%;">Cambiaso - 5.5</div><div class="player" style="top: 57%; left: 20%;">Bremer - 6.5</div><div class="player" style="top: 77%; left: 20%;">Acerbi - 6</div> 
+    <div class="player" style="top: 17%; left: 40%;">Pulisic - 10</div><div class="player" style="top: 37%; left: 40%;">Barella - 7.5</div><div class="player" style="top: 57%; left: 40%;">Samardzic - 6.5</div><div class="player" style="top: 77%; left: 40%;">Baldanzi - 6.5</div>
+    <div class="player" style="top: 37%; left: 70%;">Nzola - 9.5</div><div class="player" style="top: 57%; left: 70%;">Thauvin - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Silvestri</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3 (5)</span></li><li><span class="aligned-span">Martinez Jo.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3 (5.5)</span></li><li><span class="aligned-span">Luperto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Acerbi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bremer</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Zappa</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Cambiaso</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Olivera</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Barella</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Pulisic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Lobotka</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Malinovskyi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Samardzic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Baldanzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Immobile</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Thauvin</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Lookman</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Nzola</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (6.5)</span></li><li><span class="aligned-span">Djuric</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Caprile</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Rrahmani</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Azzi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Elmas</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Iling Junior</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kaio Jorge</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 74</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 149</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 223</h1>
 </body>
 </html>
