--- a/daiweisi/report/mobile/TULIPANIVERDIFC.html
+++ b/daiweisi/report/mobile/TULIPANIVERDIFC.html
@@ -43,7 +43,25 @@
   <div>Punteggio: 72</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 7</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Musso - 6.5</div>
+    <div class="player" style="top: 17%; left: 20%;">Pedersen - 6</div><div class="player" style="top: 37%; left: 20%;">Dorgu - 5.5</div><div class="player" style="top: 57%; left: 20%;">Oyono - 5.5</div><div class="player" style="top: 77%; left: 20%;">Calabria - 6</div> 
+    <div class="player" style="top: 27%; left: 40%;">Reijnders - 7</div><div class="player" style="top: 47%; left: 40%;">Ciurria - 6</div><div class="player" style="top: 67%; left: 40%;">Bajrami - 5.5</div>
+    <div class="player" style="top: 27%; left: 70%;">Dybala - 9</div><div class="player" style="top: 47%; left: 70%;">Beltran L. - 6.5</div><div class="player" style="top: 67%; left: 70%;">Giroud - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Falcone</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2 (6)</span></li><li><span class="aligned-span">Musso</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Calabria</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Mazzocchi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Oyono</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Dorgu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Pedersen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Pasalic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Bajrami</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lovric</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">4 (5)</span></li><li><span class="aligned-span">Ciurria</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Reijnders</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (7)</span></li><li><span class="aligned-span">Dybala</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9 (7)</span></li><li><span class="aligned-span">Giroud</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Almqvist</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Beltran L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Carnesecchi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Dimarco</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Smalling</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Doig</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">El Shaarawy</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Jankto</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Frattesi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Sanabria</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Jovic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 71.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 148</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 219.5</h1>
 </body>
 </html>
